Fixed the Link component animation trying to animate overflow.

--- a/src/components/links/link-item/link-item.component.scss
+++ b/src/components/links/link-item/link-item.component.scss
@@ -34,6 +34,7 @@
     // Remove the fixed padding since it's now handled by the animation
     // The animation will handle padding transitions
     box-sizing: border-box;
+    overflow: hidden;
   }
 }
 
